--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,71 +1,115 @@
+/* Global Styling */
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 16px;
   line-height: 1;
 }
-
+/* Textarea Styling */
 textarea {
   background: transparent;
-  border: none;
+  border: 1px solid #FFF;
   resize: none;
-  color: #000000;
-  border-left: 1px solid black;
+  color: #666;
   padding: 10px;
 }
-
+textarea:focus{
+  outline: none;
+  background-color: #eee;
+  border: 1px solid #ddd;
+}
+/* Jumbotron Styling */
 .jumbotron {
   text-align: center;
   background-color: transparent;
   color: black;
   border-radius: 0;
   border-bottom: 10px solid black;
+  padding: 2rem;
+}
+/* Heading Styling */
+.display-3{
+  font-weight: 100;
 }
 
-.description {
-  white-space: pre-wrap;
-}
-
+/* Row Styling */
 .time-block {
   text-align: center;
   border-radius: 15px;
 }
-
 .row {
   white-space: pre-wrap;
-  height: 80px;
+  min-height: 80px;
   border-top: 1px solid white;
 }
-
+/* Hour Styling */
 .hour {
-  background-color: #ffffff;
-  color: #000000;
-  border-top: 1px dashed #000000;
+  border-right: none;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+  background: #e3d861;
+  align-content: center;
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  color: #666;
 }
-
+/* Textarea coloring according to class */
 .past {
-  background-color: #d3d3d3;
-  color: white;
+  background-color: #D1E8E4;
+  border-color: #D1E8E4;
 }
 
 .present {
-  background-color: #ff6961;
-  color: white;
+  background-color: #C37B89;
+  border-color: #C37B89;
 }
 
 .future {
-  background-color: #77dd77;
-  color: white;
+  background-color: #BCCC9A;
+  border-color: #BCCC9A;
 }
-
+/* Save Button Styling */
 .saveBtn {
-  border-left: 1px solid black;
+  border: none;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #06aed5;
-  color: white;
-}
-
-.saveBtn i:hover {
-  font-size: 20px;
+  background-color: #999;
+  color: #fff;
   transition: all 0.3s ease-in-out;
+}
+.saveBtn i{
+  transition: all 0.3s ease-in-out;
+}
+.saveBtn:hover{
+  background-color: #666;
+}
+.saveBtn:hover i{
+  transform: scale(1.2);
+  
+}
+/* Responsive Part */
+@media only screen and (max-width: 767px) {
+  body{
+    font-size: 14px;
+  }
+  .jumbotron{
+    margin-bottom: 0;
+  }
+  .display-3{
+    font-size: 3rem;
+  }
+  .lead{
+    font-size: 1rem;
+  }
+  .row{
+    margin-bottom: 15px;
+  }
+  .hour{
+    border-radius: .5rem .5rem 0 0;
+    padding: 1rem;
+  }
+  .saveBtn{
+    border-radius: 0 0 .5rem .5rem;
+    padding: 1rem;
+  }
 }
